--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -28,6 +28,11 @@
   color: #1890ff;
 }
 
+.header-user {
+  float: right;
+  margin-right: 24px;
+}
+
 .sidebar-logo {
   position: relative;
   height: 64px;
