--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -5,23 +5,25 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.app-layout {
-  height: 100vh;
-}
+//.app-layout {
+//  height: 100vh;
+//}
 
 .menu-sidebar {
   position: relative;
   z-index: 10;
   min-height: 100vh;
-  box-shadow: 2px 0 6px rgba(0,21,41,.35);
+  box-shadow: 2px 0 6px rgba(0, 21, 41, .35);
 }
 
+@header-height: 48px;
+
 .header-trigger {
-  height: 64px;
-  padding: 20px 24px;
+  height: @header-height;
+  padding: 12px 16px;
   font-size: 20px;
   cursor: pointer;
-  transition: all .3s,padding 0s;
+  transition: all .3s, padding 0s;
 }
 
 .trigger:hover {
@@ -35,12 +37,17 @@
 
 .sidebar-logo {
   position: relative;
-  height: 64px;
-  padding-left: 24px;
+  height: @header-height;
+  padding-left: 16px;
   overflow: hidden;
-  line-height: 64px;
+  line-height: @header-height;
   background: #001529;
   transition: all .3s;
+}
+nz-sider.ant-layout-sider-collapsed {
+  .sidebar-logo {
+    padding-left: 8px;
+  }
 }
 
 .sidebar-logo img {
@@ -56,22 +63,24 @@
   color: #fff;
   font-weight: 600;
   font-size: 14px;
-  font-family: Avenir,Helvetica Neue,Arial,Helvetica,sans-serif;
+  font-family: Avenir, Helvetica Neue, Arial, Helvetica, sans-serif;
   vertical-align: middle;
 }
 
 nz-header {
   padding: 0;
   width: 100%;
+  height: @header-height;
+  line-height: @header-height;
   z-index: 2;
 }
 
 .app-header {
   position: relative;
-  height: 64px;
+  height: @header-height;
   padding: 0;
   background: #fff;
-  box-shadow: 0 1px 4px rgba(0,21,41,.08);
+  box-shadow: 0 1px 4px rgba(0, 21, 41, .08);
 }
 
 nz-content {
