--- a/src/styles.less
+++ b/src/styles.less
@@ -6,3 +6,11 @@
 // View all variables: https://github.com/NG-ZORRO/ng-zorro-antd/blob/master/components/style/themes/default.less
 
 // @primary-color: #1890ff;
+
+.table-operations {
+  margin-bottom: 16px;
+
+  [nz-button] + [nz-button] {
+    margin-left: 8px;
+  }
+}
