--- a/src/app/pages/post/post-list/post-list.component.html
+++ b/src/app/pages/post/post-list/post-list.component.html
@@ -1,42 +1,54 @@
 <div class="table-operations">
   <a nz-button nzType="primary" routerLink="./form">写文章</a>
-  <button nz-button nzType="default" [disabled]="false" [nzLoading]="false">编辑</button>
-  <button nz-button nzType="default" [disabled]="false" [nzLoading]="false">删除</button>
+  <button nz-button nzType="default" [disabled]="!allChecked && !indeterminate" [nzLoading]="false">编辑</button>
+  <button nz-button nzType="default" [disabled]="!allChecked && !indeterminate" [nzLoading]="false">删除</button>
+  <div class="table-search">
+    <nz-input-group nzSearch [nzAddOnAfter]="searchBtn">
+      <input type="text" nz-input [(ngModel)]="keyword" (keyup)="searchPosts($event)" placeholder="Search..." />
+    </nz-input-group>
+    <ng-template #searchBtn>
+      <button nz-button nzType="primary" (click)="searchPosts()" nzSearch><i nz-icon nzType="search"></i></button>
+    </ng-template>
+  </div>
 </div>
 <nz-table
   nzShowSizeChanger
   nzSize="middle"
   nzOuterBordered
   nzPaginationType="default"
-  [nzScroll]="{x: '1600px'}"
   [nzData]="postList.posts || []"
   [nzFrontPagination]="false"
+  [nzLoading]="loading"
   [nzTotal]="postList.total || 0"
   [nzPageIndex]="page"
+  [nzPageSize]="pageSize"
+  (nzQueryParams)="onQueryParamsChange($event)"
+  [nzShowTotal]="rangeTemplate"
+  [nzScroll]="{x: '1600px'}"
 >
   <thead>
   <tr>
-    <th nzWidth="40px" [nzChecked]="allChecked"></th>
-    <th nzWidth="220px" nzColumnKey="title">标题</th>
-    <th nzWidth="90px" nzColumnKey="postDate" [nzSortFn]="true">日期</th>
+    <th nzWidth="40px" [nzChecked]="allChecked" [nzIndeterminate]="indeterminate" (nzCheckedChange)="onAllChecked($event)"></th>
+    <th nzWidth="220px" nzColumnKey="postTitle">标题</th>
+    <th nzWidth="90px" nzColumnKey="postDate" [nzSortFn]="true" [nzSortPriority]="true">日期</th>
     <th nzWidth="120px" nzColumnKey="category">分类</th>
     <th nzColumnKey="tag">标签</th>
-    <th nzWidth="80px" nzColumnKey="views" [nzSortFn]="true">访问</th>
-    <th nzWidth="60px" nzColumnKey="comments" [nzSortFn]="true">评论</th>
-    <th nzWidth="80px" nzColumnKey="status">状态</th>
-    <th nzWidth="140px" nzColumnKey="modified">修改时间</th>
-    <th nzWidth="140px" nzColumnKey="created" [nzSortFn]="true">创建时间</th>
+    <th nzWidth="80px" nzColumnKey="postViewCount" [nzSortFn]="true" [nzSortPriority]="true">访问</th>
+    <th nzWidth="60px" nzColumnKey="commentCount" [nzSortFn]="true" [nzSortPriority]="true">评论</th>
+    <th nzWidth="80px" nzColumnKey="postStatus">状态</th>
+    <th nzWidth="140px" nzColumnKey="postModified" [nzSortFn]="true" [nzSortPriority]="true">修改时间</th>
+    <th nzWidth="140px" nzColumnKey="postCreated" [nzSortFn]="true" [nzSortPriority]="true">创建时间</th>
     <th nzWidth="80px" nzColumnKey="author">作者</th>
     <th nzWidth="60px" nzColumnKey="publisher">发布者</th>
-    <th nzWidth="160px" nzRight nzColumnKey="operator">操作</th>
+    <th nzWidth="160px" nzRight>操作</th>
   </tr>
   </thead>
   <tbody>
   <tr *ngFor="let data of postList.posts">
-    <td [nzChecked]="checkedMap[data.post.postId] || false"></td>
+    <td [nzChecked]="checkedMap[data.post.postId] || false" (nzCheckedChange)="onItemChecked(data.post.postId, $event)"></td>
     <td nzEllipsis [title]="data.post.postTitle">{{ data.post.postTitle }}</td>
     <td [title]="data.post.postDate | date: 'yyyy-MM-dd'">{{ data.post.postDate | date: 'yy-MM-dd' }}</td>
-    <td>
+    <td nzEllipsis>
       <a routerLink="./" [queryParams]="{category: cat.slug}" *ngFor="let cat of data.categories">
         <nz-tag nzColor="blue">{{cat.name}}</nz-tag>
       </a>
@@ -48,7 +60,9 @@
     </td>
     <td>{{ data.post.postViewCount }}</td>
     <td>{{ data.post.commentCount || 0 }}</td>
-    <td>{{ data.post.postStatus | postStatus }}</td>
+    <td>
+      <a routerLink="./" [queryParams]="{status: data.post.postStatus}">{{ data.post.postStatus | postStatus }}</a>
+    </td>
     <td [title]="data.post.postModified | date:'yyyy-MM-dd HH:mm'">{{ data.post.postModified | date:'yy-MM-dd HH:mm' }}</td>
     <td [title]="data.post.postCreated | date:'yyyy-MM-dd HH:mm'">{{ data.post.postCreated | date:'yy-MM-dd HH:mm' }}</td>
     <td nzEllipsis [title]="data.meta['postAuthor']">{{ data.meta['postAuthor'] }}</td>
@@ -63,3 +77,6 @@
   </tr>
   </tbody>
 </nz-table>
+<ng-template #rangeTemplate let-range="range" let-total>
+  当前：第 <span style="color: red">{{ range[0] }}-{{ range[1] }}</span> 条，共：<span style="color: red">{{ total }}</span> 条
+</ng-template>
