--- a/src/app/pages/comment/comment-list/comment-list.component.html
+++ b/src/app/pages/comment/comment-list/comment-list.component.html
@@ -1,1 +1,65 @@
-<p>comment-list works!</p>
+<div class="table-operations">
+  <button nz-button nzType="default" [disabled]="!allChecked && !indeterminate" [nzLoading]="false">编辑</button>
+  <button nz-button nzType="default" [disabled]="!allChecked && !indeterminate" [nzLoading]="false">删除</button>
+  <div class="table-search">
+    <nz-input-group nzSearch [nzAddOnAfter]="searchBtn">
+      <input type="text" nz-input [(ngModel)]="keyword" (keyup)="searchComments($event)" placeholder="Search..." />
+    </nz-input-group>
+    <ng-template #searchBtn>
+      <button nz-button nzType="primary" (click)="searchComments()" nzSearch><i nz-icon nzType="search"></i></button>
+    </ng-template>
+  </div>
+</div>
+<nz-table
+  nzShowSizeChanger
+  nzSize="middle"
+  nzOuterBordered
+  nzPaginationType="default"
+  nzTableLayout="fixed"
+  [nzData]="commentList || []"
+  [nzFrontPagination]="false"
+  [nzLoading]="loading"
+  [nzTotal]="total || 0"
+  [nzPageIndex]="page"
+  [nzPageSize]="pageSize"
+  (nzQueryParams)="onQueryParamsChange($event)"
+  [nzShowTotal]="rangeTemplate"
+>
+  <thead>
+  <tr>
+    <th nzWidth="40px" [nzChecked]="allChecked" [nzIndeterminate]="indeterminate" (nzCheckedChange)="onAllChecked($event)"></th>
+    <th nzWidth="360px" nzColumnKey="content">评论内容</th>
+    <th nzWidth="200px" nzColumnKey="postTitle">文章</th>
+    <th nzWidth="70px" nzColumnKey="commentVote" [nzSortFn]="true" [nzSortPriority]="true">点赞</th>
+    <th nzWidth="120px" nzColumnKey="email">邮箱</th>
+    <th nzWidth="130px" nzColumnKey="created" [nzSortFn]="true" [nzSortPriority]="true">时间</th>
+    <th nzWidth="80px" nzColumnKey="status">状态</th>
+    <th nzRight>操作</th>
+  </tr>
+  </thead>
+  <tbody>
+  <tr *ngFor="let data of commentList">
+    <td [nzChecked]="checkedMap[data.commentId] || false" (nzCheckedChange)="onItemChecked(data.commentId, $event)"></td>
+    <td nzEllipsis [title]="data.commentContent">{{ data.commentContent }}</td>
+    <td nzEllipsis [title]="data.post?.postTitle">
+      <a [href]="data.post?.postGuid" target="_blank">{{ data.post?.postTitle }}</a>
+    </td>
+    <td [title]="data.commentVote">{{ data.commentVote }}</td>
+    <td nzEllipsis [title]="data.commentAuthorEmail">{{ data.commentAuthorEmail }}</td>
+    <td nzEllipsis [title]="data.created | date:'yyyy-MM-dd HH:mm'">{{ data.created | date:'yy-MM-dd HH:mm' }}</td>
+    <td>
+      <a routerLink="./" [queryParams]="{status: data.commentStatus}">{{ data.commentStatus | commentStatus }}</a>
+    </td>
+    <td nzRight>
+      <a href="#">查看</a>
+      <nz-divider nzType="vertical"></nz-divider>
+      <a href="#">编辑</a>
+      <nz-divider nzType="vertical"></nz-divider>
+      <a href="#">删除</a>
+    </td>
+  </tr>
+  </tbody>
+</nz-table>
+<ng-template #rangeTemplate let-range="range" let-total>
+  当前：第 <span style="color: red">{{ range[0] }}-{{ range[1] }}</span> 条，共：<span style="color: red">{{ total }}</span> 条
+</ng-template>
