add article & post standalone & resource list

--- a/src/app/pages/post/post-list/post-list.component.html
+++ b/src/app/pages/post/post-list/post-list.component.html
@@ -1,10 +1,19 @@
-<div class="table-operations">
-  <a nz-button nzType="primary" routerLink="./form">写文章</a>
-  <button nz-button nzType="default" [disabled]="!allChecked && !indeterminate" [nzLoading]="false">编辑</button>
+<div class="table-operations" [ngSwitch]="postType">
+  <ng-container *ngSwitchCase="'post'">
+    <a nz-button nzType="primary" routerLink="/post/form">写文章</a>
+    <button nz-button nzType="default" [disabled]="!allChecked && !indeterminate" [nzLoading]="false">编辑</button>
+  </ng-container>
+  <ng-container *ngSwitchCase="'page'">
+    <a nz-button nzType="primary" routerLink="/post/form-standalone">创建新页面</a>
+    <button nz-button nzType="default" [disabled]="!allChecked && !indeterminate" [nzLoading]="false">编辑</button>
+  </ng-container>
+  <ng-container *ngSwitchCase="'attachment'">
+    <a nz-button nzType="primary" routerLink="/resource/upload">上传文件</a>
+  </ng-container>
   <button nz-button nzType="default" [disabled]="!allChecked && !indeterminate" [nzLoading]="false">删除</button>
   <div class="table-search">
     <nz-input-group nzSearch [nzAddOnAfter]="searchBtn">
-      <input type="text" nz-input [(ngModel)]="keyword" (keyup)="onSearch($event)" placeholder="Search..." />
+      <input type="text" nz-input [(ngModel)]="keyword" (keyup)="onSearch($event)" placeholder="Search..."/>
     </nz-input-group>
     <ng-template #searchBtn>
       <button nz-button nzType="primary" (click)="onSearch()" nzSearch><i nz-icon nzType="search"></i></button>
@@ -24,49 +33,69 @@
   [nzPageSize]="pageSize"
   (nzQueryParams)="onQueryParamsChange($event)"
   [nzShowTotal]="rangeTemplate"
-  [nzScroll]="{x: '1600px'}"
+  [nzScroll]="{x: tableWidth}"
 >
   <thead>
   <tr>
     <th nzWidth="40px" [nzChecked]="allChecked" [nzIndeterminate]="indeterminate" (nzCheckedChange)="onAllChecked($event)"></th>
-    <th nzWidth="220px" nzColumnKey="postTitle">标题</th>
-    <th nzWidth="90px" nzColumnKey="postDate" [nzSortFn]="true" [nzSortPriority]="true">日期</th>
-    <th nzWidth="120px" nzColumnKey="category">分类</th>
-    <th nzColumnKey="tag">标签</th>
-    <th nzWidth="80px" nzColumnKey="postViewCount" [nzSortFn]="true" [nzSortPriority]="true">访问</th>
-    <th nzWidth="60px" nzColumnKey="commentCount" [nzSortFn]="true" [nzSortPriority]="true">评论</th>
-    <th nzWidth="80px" nzColumnKey="postStatus">状态</th>
-    <th nzWidth="140px" nzColumnKey="postModified" [nzSortFn]="true" [nzSortPriority]="true">修改时间</th>
-    <th nzWidth="140px" nzColumnKey="postCreated" [nzSortFn]="true" [nzSortPriority]="true">创建时间</th>
-    <th nzWidth="80px" nzColumnKey="author">作者</th>
-    <th nzWidth="60px" nzColumnKey="publisher">发布者</th>
+    <ng-container *ngIf="postType !== 'attachment'">
+      <th nzWidth="220px" nzColumnKey="postTitle">标题</th>
+      <th nzWidth="90px" nzColumnKey="postDate" [nzSortFn]="true" [nzSortPriority]="true">日期</th>
+      <th nzWidth="120px" nzColumnKey="category" *ngIf="postType === 'post'">分类</th>
+      <th nzColumnKey="tag">标签</th>
+      <th nzWidth="80px" nzColumnKey="postViewCount" [nzSortFn]="true" [nzSortPriority]="true">访问</th>
+      <th nzWidth="60px" nzColumnKey="commentCount" [nzSortFn]="true" [nzSortPriority]="true">评论</th>
+      <th nzWidth="80px" nzColumnKey="postStatus">状态</th>
+      <th nzWidth="140px" nzColumnKey="postModified" [nzSortFn]="true" [nzSortPriority]="true">修改时间</th>
+      <th nzWidth="140px" nzColumnKey="postCreated" [nzSortFn]="true" [nzSortPriority]="true">创建时间</th>
+      <th nzWidth="80px" nzColumnKey="author">作者</th>
+      <th nzWidth="60px" nzColumnKey="publisher">发布者</th>
+    </ng-container>
+    <ng-container *ngIf="postType === 'attachment'">
+      <th nzWidth="240px">标题</th>
+      <th nzWidth="300px">文件路径</th>
+      <th nzWidth="80px">状态</th>
+      <th nzWidth="140px" nzColumnKey="postModified" [nzSortFn]="true" [nzSortPriority]="true">修改时间</th>
+      <th nzWidth="140px" nzColumnKey="postCreated" [nzSortFn]="true" [nzSortPriority]="true">创建时间</th>
+    </ng-container>
     <th nzWidth="160px" nzRight>操作</th>
   </tr>
   </thead>
   <tbody>
   <tr *ngFor="let data of postList">
     <td [nzChecked]="checkedMap[data.post.postId] || false" (nzCheckedChange)="onItemChecked(data.post.postId, $event)"></td>
-    <td nzEllipsis [title]="data.post.postTitle">{{ data.post.postTitle }}</td>
-    <td [title]="data.post.postDate | date: 'yyyy-MM-dd'">{{ data.post.postDate | date: 'yy-MM-dd' }}</td>
-    <td nzEllipsis>
-      <a routerLink="./" [queryParams]="{category: cat.slug}" *ngFor="let cat of data.categories">
-        <nz-tag nzColor="blue">{{cat.name}}</nz-tag>
-      </a>
-    </td>
-    <td nzEllipsis>
-      <a routerLink="./" [queryParams]="{tag: tag.slug}" *ngFor="let tag of data.tags">
-        <nz-tag nzColor="blue">{{tag.name}}</nz-tag>
-      </a>
-    </td>
-    <td>{{ data.post.postViewCount }}</td>
-    <td>{{ data.post.commentCount || 0 }}</td>
-    <td>
-      <a routerLink="./" [queryParams]="{status: data.post.postStatus}">{{ data.post.postStatus | postStatus }}</a>
-    </td>
-    <td [title]="data.post.postModified | date:'yyyy-MM-dd HH:mm'">{{ data.post.postModified | date:'yy-MM-dd HH:mm' }}</td>
-    <td [title]="data.post.postCreated | date:'yyyy-MM-dd HH:mm'">{{ data.post.postCreated | date:'yy-MM-dd HH:mm' }}</td>
-    <td nzEllipsis [title]="data.meta['postAuthor']">{{ data.meta['postAuthor'] }}</td>
-    <td nzEllipsis [title]="data.post.author.userNiceName">{{ data.post.author.userNiceName }}</td>
+    <ng-container *ngIf="postType !== 'attachment'">
+      <td nzEllipsis [title]="data.post.postTitle">{{ data.post.postTitle }}</td>
+      <td [title]="data.post.postDate | date: 'yyyy-MM-dd'">{{ data.post.postDate | date: 'yy-MM-dd' }}</td>
+      <td nzEllipsis *ngIf="postType === 'post'">
+        <a routerLink="./" [queryParams]="{category: cat.slug}" *ngFor="let cat of data.categories">
+          <nz-tag nzColor="blue">{{cat.name}}</nz-tag>
+        </a>
+      </td>
+      <td nzEllipsis>
+        <a routerLink="./" [queryParams]="{tag: tag.slug}" *ngFor="let tag of data.tags">
+          <nz-tag nzColor="blue">{{tag.name}}</nz-tag>
+        </a>
+      </td>
+      <td>{{ data.post.postViewCount }}</td>
+      <td>{{ data.post.commentCount || 0 }}</td>
+      <td>
+        <a routerLink="./" [queryParams]="{status: data.post.postStatus}">{{ data.post.postStatus | postStatus }}</a>
+      </td>
+      <td [title]="data.post.postModified | date:'yyyy-MM-dd HH:mm'">{{ data.post.postModified | date:'yy-MM-dd HH:mm' }}</td>
+      <td [title]="data.post.postCreated | date:'yyyy-MM-dd HH:mm'">{{ data.post.postCreated | date:'yy-MM-dd HH:mm' }}</td>
+      <td nzEllipsis [title]="data.meta['postAuthor']">{{ data.meta['postAuthor'] }}</td>
+      <td nzEllipsis [title]="data.post.author.userNiceName">{{ data.post.author.userNiceName }}</td>
+    </ng-container>
+    <ng-container *ngIf="postType === 'attachment'">
+      <td nzEllipsis [title]="data.post.postTitle">{{ data.post.postTitle }}</td>
+      <td nzEllipsis [title]="data.post.postGuid">{{ data.post.postGuid }}</td>
+      <td>
+        <a routerLink="./" [queryParams]="{status: data.post.postStatus}">{{ data.post.postStatus | postStatus }}</a>
+      </td>
+      <td [title]="data.post.postModified | date:'yyyy-MM-dd HH:mm'">{{ data.post.postModified | date:'yy-MM-dd HH:mm' }}</td>
+      <td [title]="data.post.postCreated | date:'yyyy-MM-dd HH:mm'">{{ data.post.postCreated | date:'yy-MM-dd HH:mm' }}</td>
+    </ng-container>
     <td nzRight>
       <a href="#">查看</a>
       <nz-divider nzType="vertical"></nz-divider>
