--- a/src/app/pages/comment/comment-list/comment-list.component.less
+++ b/src/app/pages/comment/comment-list/comment-list.component.less
@@ -1,4 +1,4 @@
-.status {
+.status, .op-btn {
   &-normal {
     color: #389e0d;
   }
@@ -18,4 +18,9 @@
   &-trash {
     color: #666;
   }
+}
+
+.warning {
+  color: #ff4d4f;
+  font-weight: bold;
 }
